Fix for the compilation issues